--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,50 @@
 </head>
 <body>
 
-<div id="secondaryContent">
-  <%= render 'common/session' %>
+<div class="blog-masthead">
+  <div class="container">
+    <nav class="blog-nav">
+      <a class="blog-nav-item active" href="#">Home</a>
+      <a class="blog-nav-item" href="#">New features</a>
+      <a class="blog-nav-item" href="#">Press</a>
+      <a class="blog-nav-item" href="#">New hires</a>
+      <a class="blog-nav-item" href="#">About</a>
+    </nav>
+  </div>
 </div>
 
-<%= yield %>
+<!--<div id="secondaryContent">-->
+<!--<%= render 'common/session' %>-->
+<!--</div>-->
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<div id="container" class="container">
 
+    <div class="blog-header">
+        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
+    </div>
+
+
+
+    <div id="radek" class="row">
+        <div class="col-sm-8 blog-main">
+          <%= yield %>
+        </div><!-- /.row -->
+    </div><!-- /.container -->
+</div>
 
 </body>
 </html>
+
+
+<!--<div id="menu" class="col-xs-3">-->
+
+<!--</div>-->
+
+<!--<div id="obsah" class="col-xs-9">-->
+
+
+<!--<p class="notice"><%= notice %></p>-->
+<!--<p class="alert"><%= alert %></p>-->
+<!--</div>-->
+
